--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.min.css') }}">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
@@ -44,9 +44,9 @@
 </div>
 </nav>
         {% block body %}{% endblock %}
-        <script src="scripts/jquery.js"></script>
+        <script src="{{ asset('scripts/jquery.js') }}"></script>
         <script>window.jQuery || document.write('<script src="scripts/jquery.js"><\/script>')</script>
-        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
