--- a/app/Resources/views/area/edit.html.twig
+++ b/app/Resources/views/area/edit.html.twig
@@ -1,21 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Area edit</h1>
+  <h1>Editar área</h1>
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
+  {{ form_start(edit_form) }}
+      {{ form_widget(edit_form) }}
+      <input type="submit" value="Editar" />
+  {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('area_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+  <ul>
+      <li>
+          <a href="{{ path('area_index') }}">Volver al listado</a>
+      </li>
+      <li>
+          {{ form_start(delete_form) }}
+              <input type="submit" value="Eliminar">
+          {{ form_end(delete_form) }}
+      </li>
+  </ul>
 {% endblock %}
