--- a/app/Resources/views/area/new.html.twig
+++ b/app/Resources/views/area/new.html.twig
@@ -1,16 +1,22 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Area creation</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-center">
+        <h1>Nueva área</h1>
+        <br>
+        <br>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
+        {{ form_start(form) }}
+            {{ form_widget(form) }}
+            <div class="input-group">
+              <input type="submit" class="btn btn-primary btn-xs" value="Crear área" />
+              <a class="btn btn-success btn-xs" href="{{ path('area_index') }}">Volver al listado</a>
+            </div>
+        {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('area_index') }}">Back to the list</a>
-        </li>
-    </ul>
+      </div>
+    </div>
+  </div>
 {% endblock %}
