--- a/app/Resources/views/attendant/edit.html.twig
+++ b/app/Resources/views/attendant/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Attendant edit</h1>
+    <h1>Editar encargado</h1>
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
