--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -1,39 +1,33 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Categories list</h1>
 
-    <table>
+<div class="row">
+  <div class="col-md-offset-5">
+    <h1>Categorías</h1>
+
+      <table>
         <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Actions</th>
-            </tr>
+          <tr>
+            <th>Nombre</th>
+            <th></th>
+          </tr>
         </thead>
         <tbody>
-        {% for category in categories %}
+          {% for category in categories %}
             <tr>
-                <td><a href="{{ path('category_show', { 'id': category.id }) }}">{{ category.id }}</a></td>
-                <td>{{ category.name }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('category_show', { 'id': category.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('category_edit', { 'id': category.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
+              <td>{{ category.name }}</td>
+              <td>
+                <a href="{{ path('category_show', { 'id': category.id }) }}">Ver</a>
+                <a href="{{ path('category_edit', { 'id': category.id }) }}">Editar</a>
+              </td>
             </tr>
-        {% endfor %}
+          {% endfor %}
         </tbody>
-    </table>
+      </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('category_new') }}">Create a new category</a>
-        </li>
-    </ul>
+    <a href="{{ path('category_new') }}">Crear categoría</a>
+  </div>
+</div>
+
 {% endblock %}
