--- a/app/Resources/views/category/new.html.twig
+++ b/app/Resources/views/category/new.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Category creation</h1>
+    <h1>Nueva categoría</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" value="Crear categoría" />
     {{ form_end(form) }}
 
     <ul>
         <li>
-            <a href="{{ path('category_index') }}">Back to the list</a>
+            <a href="{{ path('category_index') }}">Volver al listado</a>
         </li>
     </ul>
 {% endblock %}
