--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -40,7 +40,7 @@
           </div>   
 
           <div class="row">
-            <div class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="navbar w-100 navbar-expand-lg navbar-light bg-light">
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                   <li class="nav-item">
