--- a/app/Resources/views/fauna/index.html.twig
+++ b/app/Resources/views/fauna/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} individuos fauna {% endblock %}
+{% block title %} Individuos de Fauna {% endblock %}
 
 {% block stylesheets %}
   <link rel="stylesheet" type="text/css" href="{{ asset('scripts/dataTables/datatables.min.css') }}">
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="col-md-12 col-center">
       <br>
-      <h1>Individuos Fauna</h1>
+      <h1>Individuos de Fauna</h1>
       <br>
       <a class="btn btn-info float-right btn-m-r" href="{{ path('fauna_new') }}">Nuevo individuo</a>
     <table id="fauna-table" class="row-border hover stripe">
