--- a/app/Resources/views/faspecie/index.html.twig
+++ b/app/Resources/views/faspecie/index.html.twig
@@ -8,74 +8,47 @@
 {% endblock %}
 
 {% block body %}
-
-    <h1>Faspecies list</h1>
-    <table class="table">
-    <thead>
-        <tr>
-          <th>Name</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for user in listFASpecie %}
-            <tr>
-              <td>{{ user.name | upper }}</td>
-              <td>{{ user.name | upper }}</td>
-              <td>{{ user.name | upper }}</td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="2" class="text-center">
-                    <em>No FASpecie</em>
-                </td>
-            </tr>
-        {% endfor %}
-    </tbody>
-    <tfoot>
-        <tr>
-            <td colspan="2">
-                {{ pagination(listFASpecie, 'page') }}
-            </td>
-        </tr>
-    </tfoot>
-</table>
-<!--
   <div class="container">
     <div class="row">
-      <div class="col-md-8 col-center">
+      <div class="col-md-12 col-center">
         <br>
         <h1>Especies de Fauna</h1>
         <br>
         <a class="btn btn-info float-right btn-m-r" href="{{ path('faspecie_new') }}">Nueva especie</a>
-
-          <table id="faspecie-table" class="row-border hover stripe">
-            <thead>
-              <tr>
-                <th width="65%">Nombre</th>
-                <th width="35%"></th>
-              </tr>
-            </thead>
-            <tbody>
-            {% for fASpecie in fASpecies %}
-              <tr>
-                <td>{{ fASpecie.name }}</td>
-                <td>
-                  <a class="btn btn-primary" href="#">Subespecies</a>
-                  <a class="btn btn-success" href="{{ path('faspecie_edit', { 'id': fASpecie.id }) }}">
-                    <i class="fa fa-pencil"></i>
-                  </a>
-                  <a class="btn btn-danger" href="{{ path('faspecie_delete', { 'id': fASpecie.id }) }}">
-                    <i class="fa fa-trash"></i>
-                  </a>
-                </td>
-              </tr>
+        <table class="table">
+        <thead>
+            <tr>
+              <th>Name</th>
+              <th>Editar</th>
+              <th>Eliminar</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for fas in listFASpecie %}
+                <tr>
+                  <td>{{ fas.name}}</td>
+                  <td><a class="btn btn-success" href="{{ path('faspecie_edit', { 'id': fas.id }) }}"> >> </td>
+                  <td><a class="btn btn-danger" href="{{ path('faspecie_delete', { 'id': fas.id }) }}">  x  </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="2" class="text-center">
+                        <em>No FASpecie</em>
+                    </td>
+                </tr>
             {% endfor %}
-          </tbody>
-        </table>
-
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="2">
+                    {{ pagination(listFASpecie, 'page') }}
+                </td>
+            </tr>
+        </tfoot>
+    </table>
       </div>
     </div>
-  </div> -->
+  </div>
 
 {% endblock %}
 {% block javascripts %}
@@ -83,21 +56,7 @@
 <script src="{{ asset('scripts/dataTables/datatables.min.js') }}"></script>
 <script>
   $(document).ready(function(){
-    $('#faspecie-table').DataTable({
-      searching: false,
-      info: false,
-      lengthChange: false,
-      language: {
-        emptyTable: "No se han encontrado especies",
-        processing: "Procesando...",
-        paginate: {
-          first: "Inicio",
-          last: "Fin",
-          next: "Siguiente",
-          previous: "Anterior"
-        }
-      }
-    });
+    $('#faspecie-table').DataTable();
   });
 </script>
 {% endblock %}
