--- a/app/Resources/views/flora/show.html.twig
+++ b/app/Resources/views/flora/show.html.twig
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <th>Age</th>
-                <td>{{ flora.age }}</td>
+                <td>{{ flora.plantationDate }}</td>
             </tr>
             <tr>
                 <th>Image</th>
