WIP: vista de fauna y flora

--- a/app/Resources/views/fauna/show.html.twig
+++ b/app/Resources/views/fauna/show.html.twig
@@ -26,7 +26,7 @@
             <li class="list-group-item">
               <b>Próximo destino</b><br>
               &emsp;<b>Lugar:</b> {% if fauna.destination is null %} <i class="text-muted">No se ha definido</i> {% else %} {{ fauna.destination }} {% endif %} <br>
-              &emsp;<b>Fecha:</b> {% if fauna.departureDate is null %} <i class="text-muted">No se ha definido</i> {% else %} {{ fauna.departureDate }} {% endif %} <br>
+              &emsp;<b>Fecha:</b> {% if fauna.departureDate is null %} <i class="text-muted">No se ha definido</i> {% else %} $row['{{ fauna.departureDate}}']->format('d/m/Y') {% endif %} <br>
             </li>
           </ul>
         </div>
