--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Bioparque{% endblock %}</title>
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+    {% endblock %}
     <!-- Bootstrap core CSS -->
     <link href="{{ asset('bootstrap/css/style.css') }}" rel="stylesheet">
     <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
-    
+
     <!-- Custom styles for this template -->
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     <link href="{{ asset('images/fav.png') }}" rel="icon">
@@ -34,11 +35,11 @@
     <div class="site-overlay"></div>
       <nav>
         <div class="container-fluid">
-          <div class="row">  
+          <div class="row">
             <img src="{{ asset('images/logo_mlp.png') }}" alt="Logo de la Municipalidad de La Plata" class="img-responsive">
             <img src="{{ asset('images/juntos_en_todo.png') }}" alt="Logo Juntos en todo" class="img-responsive">
             <img src="{{ asset('images/bioparque_laplata_sm.png') }}" alt="Logo del Bioparque" class="img-responsive">
-          </div>   
+          </div>
 
           <div class="row">
             <div class="navbar w-100 navbar-expand-lg navbar-light bg-light">
@@ -75,7 +76,7 @@
                       <a class="dropdown-item" href="{{ path('flsubspecie_index') }}">Flora</a>
                     </div>
                   </li>
-                  
+
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Individuos</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -88,7 +89,7 @@
                     <a class="nav-link" href="#">Admin</a>
                   </li>
                 </ul>
-                
+
               </div>
             </nav>
           </div>
@@ -105,7 +106,7 @@
         <div class="row">
           <div class="col-md-12">
             <img src="{{ asset('images/juntos_en_todo.png') }}" alt="Logo Juntos en todo" class="text-center mg-auto">
-          </div>                    
+          </div>
         </div>
       </div>
     </footer>
@@ -126,6 +127,6 @@
     <script src="{{ asset('bootstrap/js/wow.min.js') }}"></script>
     <script src="{{ asset('bootstrap/js/scripts.js') }}"></script>
     <script src="{{ asset('bootstrap/js/odometer.js') }}"></script>
-    {% block javascripts %}{% endblock %}   
+    {% block javascripts %}{% endblock %}
   </body>
 </html>
