--- a/web/bootstrap/css/style.css
+++ b/web/bootstrap/css/style.css
@@ -43,21 +43,27 @@ nav {
 .logo img {
     height: 48px;
 }
-    
+
 
 section.principal  {
     padding: 2em 0;
 }
 
-footer {
-    background: #f2f2f2;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    width: 100%;
-    float: left;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
+
+body {
+  margin-bottom: 60px;
+}
+
+.footer {
+  padding-top: 1em;
+  padding-bottom: 1em;
+  bottom: 0;
+  width: 100%;
+  float: left;
+  text-align: center;
+  position: fixed;
+  height: 60px;
+  background-color: #f2f2f2;
 }
 
 @media (max-width: 1200px) {
