cambios para dql

--- a/app/Resources/views/fauna/index.html.twig
+++ b/app/Resources/views/fauna/index.html.twig
@@ -87,12 +87,12 @@
   $("#appbundle_fauna_destination").removeProp('required');
   $("#appbundle_fauna_subspecie").removeProp('required');
   $("#appbundle_fauna_specie").removeProp('required');
-// $("form").submit(function(event) {
-//   var proxDestino = $('#proxDestino').val();
-//   var encargado = $('#encargado').val();
-//   var especie = $('#especie').val();
-//   var subEspecie = $('#subEspecie').val();
-// });
+  // $("form").submit(function() {
+  //   // var proxDestino = $('#proxDestino').val();
+  //   // var encargado = $('#encargado').val();
+  //   // //var especie = $('#especie').val();
+  //   $('#espe').val($('#appbundle_fauna_specie').val());
+  // });
   // $('#button').click(function() {
   //   var proxDestino = $('#proxDestino').val();
   //   var encargado = $('#encargado').val();
