--- a/app/Resources/views/area/index.html.twig
+++ b/app/Resources/views/area/index.html.twig
@@ -33,9 +33,10 @@
                   <a class="btn btn-success" href="{{ path('area_edit', { 'id': area.id }) }}">
                     <i class="fa fa-pencil"></i>
                   </a>
-                  <a class="btn btn-danger" href="{{ path('area_delete', { 'id': area.id }) }}">
+                  <input class="area_id" value="{{area.id}}" hidden>
+                  <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
                     <i class="fa fa-trash"></i>
-                  </a>
+                  </button>
                 </td>
               </tr>
             {% endfor %}
@@ -46,6 +47,28 @@
     </div>
   </div>
 
+
+  <div class="modal" id='delete_modal' tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Eliminar área</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>¿Estás seguro de que deseas eliminar ésta área?</p>
+        </div>
+        <div class="modal-footer">
+          <form class="form_m_d" method="post">
+            <button type="submit" class="btn btn-primary">Eliminar</button>
+          </form>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
 {% block javascripts %}
 
@@ -53,7 +76,7 @@
 <script>
   $(document).ready(function(){
     $('#area-table').DataTable({
-      searching: false, 
+      searching: false,
       info: false,
       lengthChange: false,
       language: {
@@ -68,5 +91,15 @@
       }
     });
   });
+</script>
+
+<script>
+
+$('#area-table').on("click", ".button_delete", function() {
+  var id_area = $(this).closest('tr').find('.area_id').val();
+  $('.form_m_d').attr('action', '/area/'+id_area);
+  console.log(id_area);
+
+});
 </script>
 {% endblock %}
