modificaciones para filtros en fauna

--- a/app/Resources/views/area/index.html.twig
+++ b/app/Resources/views/area/index.html.twig
@@ -13,7 +13,9 @@
       <div class="col-md-12 col-center">
         <h1>Áreas</h1>
         <br>
-        <a class="btn btn-info float-right btn-m-r" href="{{ path('area_new') }}">Nueva área</a>
+        <div class="jumbotron" style="padding-top: 2%; padding-bottom: 5%;">
+          <a class="btn btn-info float-right btn-m-r" href="{{ path('area_new') }}">Nueva área</a>
+        </div>
 
           <table id="area-table" class="table row-border hover stripe" name="TABLA">
             <thead class="thead-dark">
